--- a/css/ventero.webflow.css
+++ b/css/ventero.webflow.css
@@ -760,7 +760,7 @@ p {
   margin-bottom: 100px;
   font-family: Montserrat, sans-serif;
   color: #030303;
-  font-size: 4vw;
+  font-size: 3vw;
   font-weight: 600;
   text-align: center;
 }
@@ -790,6 +790,14 @@ p {
   max-width: 18%;
   margin-right: 40px;
   margin-left: 40px;
+}
+
+.image-27.bubble {
+  max-width: 23%;
+}
+
+.image-27.webflow {
+  max-width: 23%;
 }
 
 .feature-section {
@@ -976,6 +984,7 @@ p {
 
 .testimonials {
   margin-bottom: 0px;
+  padding-bottom: 140px;
   background-color: #fff;
   color: #192024;
 }
